[package]
name = "rsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai = { version = "1.11.0", features = ["serde", "bin-features"] }
clap = { version = "3.2.14", features = ["derive"] }
serde_json = "1.0.91"
